Initial push to jarins portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,22 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Jarin's Portfolio</title>
   <base href="/">
+  <!--Material Icon-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Font Awesome-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="loading-icon">
+      <i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
+      <span class="sr-only">Loading...</span>
+    </div>
+  </app-root>
 </body>
 </html>
