Add 2 more clients

--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,7 @@
       <span class="sr-only">Loading...</span>
     </div>
   </app-root>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.1/imagesloaded.pkgd.min.js"></script>
 </body>
 </html>
